# depth-based-parallax-effect

./: .gitignore  CMakeLists.txt  README.md  download_models.sh  download_sam_model.sh  environment.yml  requirements.txt
examples/: couch-parallax.avi
examples/couch/: output_video.avi  scribbles
examples/dolomites/: output_video.avi  scribbles
examples/montenegro/: montenegro-parallax.avi
examples/vittoria-alata/: output_video.avi  scribbles
framework/include/framework/: image.h
framework/src/: image.cpp
src/: bilateral_filter.h  bilateral_filter_main.cpp  helpers.h  load_sam.py  main.cpp  main.py  parallax.h  parallax_main.cpp  poisson.h  poisson.py  poisson_main.cpp  sam_ex.py
src/dist_depth/: launch.py  run_rgb_cnn.py
